# MCMG

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
Data/: Katyusha.mxl  Katyusha_source_modified1.mxl  Katyusha_source_modified2.mxl  Van_gogh.mxl  Whiplash-Caravan_by_B.F.mxl  chopin-waltz-in-e-minor-b-56-kk-iva15.mxl  waltz-for-piano-in-g-major-from-robert-schumanns-kinderball-op-130-no-2-but-arrangedtwo-hands.mxl  waltz-in-e-minor-griboyedov.mxl  waltz-in-e-minor-nikolai-titov.mxl  waltz-in-g-major-d-844-franz-schubert.mxl  waltz-in-g-major-nikolai-titov-nikolaj-titov.mxl  waltz-no-7-in-e-minor-grant-dersom.mxl
Data/bach/: aria14.mxl  bwv1032b.mxl  bwv976.mxl  jsbpassc.mxl  preludii.mxl  sheep.mxl
Data/beethoven/: Beethoven-violin-sonata1-1-piano.mxl  Furelise-Beethoven.mxl  beethoven-minuet-in-G.mxl
Data/mozart/: Mozart_Wolfgang_Amadeus_-_Ave_Verum_Corpus_(string_quintet).mxl  mozart_-_Turkish_March_in_Eb.mxl  piano_sonata_11.mxl
experiments/: 3waltz_1765294849.mid  3waltz_1765295671.mid  3waltz_g_major_1765297402.mid  3waltz_g_major_1765299940.mid  Experimentos_proyecto.html  Experimentos_proyecto.ipynb  griboyedov_waltz_remix.mid  griboyedov_waltz_remix_order_3.mid  waltz-for-piano-in-g-major-from-robert-schumanns-kinderball-op-130-no-2-but-arrangedtwo-hands.mid  waltz-in-e-minor-griboyedov.mid  waltz-in-g-major-d-844-franz-schubert.mid  waltz-in-g-major-nikolai-titov-nikolaj-titov.mid
experiments/poll/: Encuestas_Markov - Bach.csv  (+1 more)
lib/: event.py  instrument.py  note.py  parser.py  utils.py
lib/mcmg/: note.py  (+3 more)
tests/: bella_ciao.py  waltz.py
